# soul-buddy

./: .coverage  .dockerignore  .env.example  .gitignore  DOCKER_README.md  docker-compose-sb-backend-staging.yml  docker-compose-sb-backend.yml  docker-compose.yml
sb-backend/: .dockerignore  .env.demo  .env.example  .gitignore  Dockerfile  README.md  README_DOCKER.md  conftest.py  docker-compose.yml  entrypoint.sh  models.py  pyproject.toml  pytest.ini  quickstart-compose.sh  quickstart-docker.sh  quickstart.sh  requirements-dev.txt  requirements.txt  run_tests.sh  seed_db.py  server.py  setup.sh  test_classifier.py  testing.py
sb-backend/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
sb-backend/api/: chat.py  classify.py  guardrail.py  insights.py  privacy.py  supabase_auth.py  tool_rec.py
sb-backend/config/: auth_database.py  database.py  logging_config.py  redis.py  settings.py  sqlalchemy_db.py  supabase.py
sb-backend/config-files/: logging.yaml
sb-backend/db-setup/: add_conversation_insights_table.sql  add_language_column_to_conversation_turns.sql  add_language_formats_to_conversation_turns.sql  auth_tables.sql  create_tables.sql  drop_tables.sql  migrate_intelligence_layer.sql  seed_config_data.sql
sb-backend/docs/: ARCHITECTURE.md
sb-backend/examples/: AUDIT_SUMMARY.md  CODE_CHANGES.md  DOCUMENTATION_INDEX.md  INTEGRATION_TESTS_GUIDE.md  NODE_STREAMING_AUDIT.md  STREAMING_AUDIT_DETAILED.md  STREAMING_IMPLEMENTATION.md  STREAMING_QUICK_REFERENCE.md  TEST_SUITE_SUMMARY.md  env.example-template  examples_sqlalchemy.py
sb-backend/graph/: graph_builder.py  state.py  streaming.py
sb-backend/orm/: __init__.py  auth_base.py  auth_models.py  conversation_phases.py  conversation_steps.py  conversation_turns.py  flow.py  (+13 more)
(+112 files in other folders)
